--- a/Coder Home.html
+++ b/Coder Home.html
@@ -5,27 +5,27 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Coder Home</title>
-	<link rel="stylesheet" href="Coder Web Style.css" />
-	<link rel="stylesheet" href="Coder Web Responsive.css" />
+	<link rel="stylesheet" href="./Coder Web Style.css" />
+	<link rel="stylesheet" href="./Coder Web Responsive.css" />
 </head>
 
 <body>
 	<!-- Navigation Bar-->
 
 	<header>
-		<a href="Coder Home.html">
-			<img src="Images/Coder Logo/Coder-Web-Logo.png" alt="Coder" class="Logo_Image" />
+		<a href="./Coder Home.html">
+			<img src="./Images/Coder Logo/Coder-Web-Logo.png" alt="Coder" class="Logo_Image" />
 		</a>
 		<nav class="top">
 			<ul>
-				<li><a href="#Coder Home.html">Home</a></li>
-				<li><a href="#Languages.html">Language</a></li>
-				<li><a href="#Test.html">Test</a></li>
-				<li><a href="##Sign up.html">Sign In</a></li>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Language</a></li>
+				<li><a href="#">Test</a></li>
+				<li><a href="#">Sign In</a></li>
 			</ul>
 		</nav>
 		<a href="Coder Home.html">
-			<img src="Images/Sign Up.png" alt="Sign Up" href="#Sign up.html" class="Sign_Up" />
+			<img src="./Images/Sign Up.png" alt="Sign Up" href="#" class="Sign_Up" />
 		</a>
 	</header>
 
@@ -49,11 +49,11 @@
 			</p>
 		</div>
 		<div class="right_col">
-			<img src="Images/Coder Logo/Official Coder App Logo 2.png" alt="Coder App Logo" class="Coder_App_Logo" />
+			<img src="./Images/Coder Logo/Official Coder App Logo 2.png" alt="Coder App Logo" class="Coder_App_Logo" />
 			<button>Download Now!</button>
 			<div class="OnMobile">
-				<img src="Images/Coder Logo/get-it-on-google-play-badge.png" alt="Get on Google Play Store" class="Get_On_Mobile" />
-				<img src="Images/Coder Logo/download-on-the-app-store-apple-logo-svgrepo-com.png" alt="Get on Apple App Store" class="Get_On_Mobile" />
+				<img src="./Images/Coder Logo/get-it-on-google-play-badge.png" alt="Get on Google Play Store" class="Get_On_Mobile" />
+				<img src="./Images/Coder Logo/download-on-the-app-store-apple-logo-svgrepo-com.png" alt="Get on Apple App Store" class="Get_On_Mobile" />
 			</div>
 		</div>
 	</section>
@@ -61,7 +61,7 @@
 	<section class="FFS">
 		<div class="block">
 			<div class="icon-text">
-				<img src="Images/SVG Icons/money_off_white_48dp.svg" alt="Money-Free Icon" class="Icon" />
+				<img src="./Images/money_off_white_48dp.svg" alt="Money-Free Icon" class="Icon" />
 				<p>Free</p>
 			</div>
 			<div class="FFS_Extra">
@@ -70,7 +70,7 @@
 		</div>
 		<div class="block">
 			<div class="icon-text">
-				<img src="Images/SVG Icons/bolt_white_48dp.svg" alt="Fast-Bolt Icon" class="Icon" />
+				<img src="./Images/SVG Icons/bolt_white_48dp.svg" alt="Fast-Bolt Icon" class="Icon" />
 				<p>Fast</p>
 			</div>
 			<div class="FFS_Extra">
@@ -79,7 +79,7 @@
 		</div>
 		<div class="block">
 			<div class="icon-text">
-				<img src="Images/SVG Icons/lock_white_48dp.svg" alt="Lock-Icon" class="Icon" />
+				<img src="./Images/SVG Icons/lock_white_48dp.svg" alt="Lock-Icon" class="Icon" />
 				<p>Safe</p>
 			</div>
 			<div class="FFS_Extra">
@@ -95,19 +95,19 @@
 		</p>
 		<div class="PL">
 			<figure>
-				<img src="Images/PL Logos/HTML.png" alt="HTML" class="HTML_Img" />
+				<img src="./Images/PL Logos/HTML.png" alt="HTML" class="HTML_Img" />
 				<figcaption>HTML</figcaption>
 			</figure>
 			<figure>
-				<img src="Images/PL Logos/CSS.png" alt="CSS" class="CSS_Img" />
+				<img src="./Images/PL Logos/CSS.png" alt="CSS" class="CSS_Img" />
 				<figcaption>CSS</figcaption>
 			</figure>
 			<figure>
-				<img src="Images/PL Logos/JS.png" alt="JS" class="JS_Img" />
+				<img src="./Images/PL Logos/JS.png" alt="JS" class="JS_Img" />
 				<figcaption>JavaScript</figcaption>
 			</figure>
 			<figure>
-				<img src="Images/PL Logos/Python.png" alt="Python" class="Python_Img" />
+				<img src="./Images/PL Logos/Python.png" alt="Python" class="Python_Img" />
 				<figcaption>Python</figcaption>
 			</figure>
 		</div>
@@ -121,16 +121,16 @@
 		<div class="Follow_On_SM">
 			<p>Follow us on:</p>
 			<div class="SM_Reddit">
-				<img src="Images/SVG Icons/orange-stroke-icons8-reddit.svg" alt="Reddit_Img" />
-				<img src="Images/SVG Icons/orange-icons8-reddit.svg" alt="Reddit_Fill_Img" class="Reddit_Fill" />
+				<img src="./Images/SVG Icons/orange-stroke-icons8-reddit.svg" alt="Reddit_Img" />
+				<img src="./Images/SVG Icons/orange-icons8-reddit.svg" alt="Reddit_Fill_Img" class="Reddit_Fill" />
 			</div>
 			<div class="SM_Twitter">
-				<img src="Images/SVG Icons/blue-stroke-icons8-twitter.svg" alt="Twitter_Img" />
-				<img src="Images/SVG Icons/blue-icons8-twitter.svg" alt="Twitter_Fill_Img" class="Twitter_Fill" />
+				<img src="./Images/SVG Icons/blue-stroke-icons8-twitter.svg" alt="Twitter_Img" />
+				<img src="./Images/SVG Icons/blue-icons8-twitter.svg" alt="Twitter_Fill_Img" class="Twitter_Fill" />
 			</div>
 			<div class="SM_Instagram">
-				<img src="Images/SVG Icons/pink-stroke-icons8-instagram.svg" alt="Instagram_Img" />
-				<img src="Images/SVG Icons/pink-icons8-instagram.svg" alt="Instagram_Fill_Img" class="Instagram_Fill" />
+				<img src="./Images/SVG Icons/pink-stroke-icons8-instagram.svg" alt="Instagram_Img" />
+				<img src="./Images/SVG Icons/pink-icons8-instagram.svg" alt="Instagram_Fill_Img" class="Instagram_Fill" />
 			</div>
 		</div>
 			<p>For more Info, email us on:<a href="#CoderHelp@gmail.com"> CoderHelp@gmail.com</a></p>
