Updated HTML & CSS Files
1. HTML - Removed a few class attributes and added a div element around the Footer social media icons

2. CSS - Removed a few CSS styles and added a few CSS style around the Footer social media icons

3. Fixed a few errors in HTML file updated the layout for mobile viiew in CSS file

--- a/Coder Home.html
+++ b/Coder Home.html
@@ -61,7 +61,7 @@
 	<section class="FFS">
 		<div class="block">
 			<div class="icon-text">
-				<img src="./Images/money_off_white_48dp.svg" alt="Money-Free Icon" class="Icon" />
+				<img src="./Images/SVG Icons/money_off_white_48dp.svg" alt="Money-Free Icon" class="Icon" />
 				<p>Free</p>
 			</div>
 			<div class="FFS_Extra">
@@ -120,17 +120,19 @@
 	<footer>
 		<div class="Follow_On_SM">
 			<p>Follow us on:</p>
-			<div class="SM_Reddit">
-				<img src="./Images/SVG Icons/orange-stroke-icons8-reddit.svg" alt="Reddit_Img" />
-				<img src="./Images/SVG Icons/orange-icons8-reddit.svg" alt="Reddit_Fill_Img" class="Reddit_Fill" />
-			</div>
-			<div class="SM_Twitter">
-				<img src="./Images/SVG Icons/blue-stroke-icons8-twitter.svg" alt="Twitter_Img" />
-				<img src="./Images/SVG Icons/blue-icons8-twitter.svg" alt="Twitter_Fill_Img" class="Twitter_Fill" />
-			</div>
-			<div class="SM_Instagram">
-				<img src="./Images/SVG Icons/pink-stroke-icons8-instagram.svg" alt="Instagram_Img" />
-				<img src="./Images/SVG Icons/pink-icons8-instagram.svg" alt="Instagram_Fill_Img" class="Instagram_Fill" />
+			<div class="SM--Icons">
+				<div class="SM">
+					<img src="./Images/SVG Icons/orange-stroke-icons8-reddit.svg" alt="Reddit_Img" />
+					<img src="./Images/SVG Icons/orange-icons8-reddit.svg" alt="Reddit_Fill_Img" class="SM_Fill" />
+				</div>
+				<div class="SM">
+					<img src="./Images/SVG Icons/blue-stroke-icons8-twitter.svg" alt="Twitter_Img" />
+					<img src="./Images/SVG Icons/blue-icons8-twitter.svg" alt="Twitter_Fill_Img" class="SM_Fill" />
+				</div>
+				<div class="SM">
+					<img src="./Images/SVG Icons/pink-stroke-icons8-instagram.svg" alt="Instagram_Img" />
+					<img src="./Images/SVG Icons/pink-icons8-instagram.svg" alt="Instagram_Fill_Img" class="SM_Fill" />
+				</div>
 			</div>
 		</div>
 			<p>For more Info, email us on:<a href="#CoderHelp@gmail.com"> CoderHelp@gmail.com</a></p>
