Update the file Home.html
Fixed CSS link and a few href attributes

--- a/Home.html
+++ b/Home.html
@@ -5,15 +5,15 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Coder Home</title>
-	<link rel="stylesheet" href="./Coder Web Style.css" />
-	<link rel="stylesheet" href="./Coder Web Responsive.css" />
+	<link rel="stylesheet" href="./Coder_Web_Style.css" />
+	<link rel="stylesheet" href="./Coder_Web_Responsive.css" />
 </head>
 
 <body>
 	<!-- Navigation Bar-->
 
 	<header>
-		<a href="./Coder Home.html">
+		<a href="./Home.html">
 			<img src="./Images/Coder Logo/Coder-Web-Logo.png" alt="Coder" class="Logo_Image" />
 		</a>
 		<nav class="top">
@@ -24,7 +24,7 @@
 				<li><a href="#">Sign In</a></li>
 			</ul>
 		</nav>
-		<a href="Coder Home.html">
+		<a href="Home.html">
 			<img src="./Images/Sign Up.png" alt="Sign Up" href="#" class="Sign_Up" />
 		</a>
 	</header>
@@ -138,9 +138,9 @@
 			<p>For more Info, email us on:<a href="#CoderHelp@gmail.com"> CoderHelp@gmail.com</a></p>
 		<nav>
 			<ul>
-				<li><a href="#Coder Home.html">Home</a></li>
-				<li><a href="#Languages.html">Languages</a></li>
-				<li><a href="#Test.html">Test</a></li>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Languages</a></li>
+				<li><a href="#">Test</a></li>
 			</ul>
 		</nav>
 	</footer>
